# omnipackage-rs

./: .gitignore  Cargo.toml  README.md  action.yml  clear_bucket.rb
.claude-plugin/: marketplace.json
.github/action/: action.yml
.github/actions/setup/: action.yml
.github/aur/: PKGBUILD.tmpl  release-aur.sh
.github/workflows/: _prime.yml  _release-packages.yml  ci.yml  e2e.yml  refresh_image_cache.yml  release-aur.yml  release-packages-master.yml  release-packages-stable.yml  self-release-master.yml
.omnipackage/: PKGBUILD.liquid  config.yml  install_rust.sh  specfile.spec.liquid
.omnipackage/deb/: rules.liquid
plugins/omnipackage/.claude-plugin/: plugin.json
plugins/omnipackage/skills/omnipackage/: SKILL.md
scripts/: clear_bucket.rb
src/: artefacts.rs  builder.rs  config.rs  distros.rs  distros.yml  extract_version.rs  gpg.rs  gpg_commands.rs  image_cache.rs  info.rs  job_variables.rs  logger.rs  main.rs  package.rs  portal.rs  publish.rs  publisher.rs  release.rs  runner.rs  shell.rs  template.rs
src/init/: args.rs  detect.rs  mod.rs  scaffold.rs  templates.rs  tokens.rs
src/init/templates/c/: PKGBUILD.liquid  config.yml  specfile.spec.liquid
src/init/templates/cmake/: PKGBUILD.liquid  config.yml  specfile.spec.liquid
src/init/templates/cpp/: config.yml
src/init/templates/crystal/: PKGBUILD.liquid  config.yml  install_crystal.sh  specfile.spec.liquid
src/init/templates/electron/: config.yml  install.sh  specfile.spec.liquid
src/init/templates/generic/: PKGBUILD.liquid  config.yml  specfile.spec.liquid
src/init/templates/go/: PKGBUILD.liquid  config.yml  install_go.sh  specfile.spec.liquid
src/init/templates/python/: PKGBUILD.liquid  config.yml  install.sh  specfile.spec.liquid
src/init/templates/ruby/: config.yml  install.sh  specfile.spec.liquid
src/init/templates/rust/: PKGBUILD.liquid  config.yml  install_rust.sh  specfile.spec.liquid
src/install_page/: install.html
src/package/: appimage.rs  deb.rs  pacman.rs  rpm.rs
src/publish/: artefacts.rs  cloudflare.rs  deb.rs  distributed_lock.rs  locking.rs  mod.rs  retention.rs  rpm.rs  s3.rs
src/publish/install_page/: badge.svg.liquid  install.html.liquid  mod.rs
src/publish/repo_files/: badge.rs  badge.svg.liquid  html.rs  install.html.liquid  install.sh.liquid  json.rs  mod.rs  sh.rs
src/publish/s3/: mod.rs  probe.rs
src/release/: mod.rs
tests/: cli.rs  release.rs
tests/e2e/: README.md  run.sh
tests/e2e/projects/: .gitignore
tests/fixtures/: config.yml  fake_container_runtime.sh  install.html
tests/fixtures/sample_project/: Makefile  main.c
(+37 files in other folders)
