[package]
name = "omnipackage"
description = "Build and distribute RPM & DEB packages easily"
version = "0.1.0"
edition = "2024"
authors = ["Oleg Antonyan <oleg.b.antonyan@gmail.com>"]
license = "GPLv3"
homepage = "https://omnipackage.org/"
repository = "https://github.com/omnipackage/omnipackage-rs"
documentation = "https://docs.omnipackage.org/"

[dependencies]
clap = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde-saphyr = "*"
liquid = "*"
regex = "*"
tempfile = "*"
subprocess = "*"
chrono = "*"
glob = "*"
dotenvy = "*"
aws-sdk-s3 = { version = "*", features = ["behavior-version-latest"] }
aws-config = { version = "*", features = ["behavior-version-latest"] }
aws-credential-types = "*"
tokio = { version = "*", features = ["rt", "rt-multi-thread"] }
base64 = "*"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
