[package]
name = "omnipackage"
description = "Build and distribute RPM & DEB packages easily"
version = "0.1.2"
edition = "2024"
authors = ["Oleg Antonyan <oleg.b.antonyan@gmail.com>"]
license = "GPLv3"
homepage = "https://omnipackage.org/"
repository = "https://github.com/omnipackage/omnipackage-rs"
documentation = "https://docs.omnipackage.org/"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0"
serde_json = "1"
liquid = "0"
regex = "1"
tempfile = "3"
subprocess = "1"
chrono = "0.4"
glob = "0"
dotenvy = "0.15"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
base64 = "0.22"
shell-words = "1"
reqwest = { version = "0.13", features = ["json", "blocking"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
